--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -17536,7 +17536,7 @@
    ],
    "source": [
     "# Обучим CatBoost на price_type == 0 на 10 фолдах. Дообучим CatBoost на price_type == 1 на 10 фолдах. \n",
-    "# На каждом модели верхнего порядка будем предиктить усредненный target для тестовой выборки\n",
+    "# На каждом фолде модели верхнего порядка будем предиктить усредненный target для тестовой выборки\n",
     "\n",
     "kf = KFold(n_splits=10, shuffle=True, random_state=RANDOM_STATE)\n",
     "validation['prediction_clf_1'] = 0\n",
@@ -17556,7 +17556,6 @@
     "                               cat_features=cat_cols)\n",
     "    clf_1.fit(train_pool, eval_set=valid_pool)\n",
     "    validation['prediction_clf_1'] += clf_1.predict(validation[selected_features]) / kf.n_splits\n",
-    "    #test['target'] += clf.predict(test[selected_features]) / kf.n_splits\n",
     "\n",
     "# Предиктим на валидации, чтобы оценить качество модели    \n",
     "validation['prediction_clf_1'] = np.exp(validation['prediction_clf_1'])\n",
